--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "cropper": "^3.1.4",
     "echarts": "^3.7.1",
     "element-ui": "^2.2.1",
+    "es6-promise": "^4.2.4",
     "jquery": "^1.12.4",
     "layui-laydate": "^5.0.7",
+    "lru-cache": "^4.1.2",
     "md5": "^2.2.1",
     "prerender-spa-plugin": "^2.1.0",
     "qrcode": "^0.9.0",
     "quill": "^1.3.5",
+    "route-cache": "^0.4.4",
+    "serve-favicon": "^2.4.5",
     "v-distpicker": "^1.0.16",
     "vue": "^2.3.3",
     "vue-area-linkage": "^1.2.6",
@@ -34,7 +38,8 @@
     "vue-router": "^2.7.0",
     "vue-wechat-title": "^2.0.4",
     "vuedraggable": "^2.16.0",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
